[package]
name = "roplat_rerun"
version = "0.1.0"
edition = "2024"
authors = ["Yixing <yanjizhou312@163.com>"]
readme = "README.md"
license = "Apache-2.0"
description = "Rerun integration for Robot Experimentation Platform"
categories = ["science::robotics"]
keywords = ["robot", "robotics", "rerun", "visualization", "roplat"]

[dependencies]
rerun = "0.26.0"
robot_behavior = { version = "0.5.0", path = "../robot_behavior" }
rerun_urdf = { version = "0.1.0", path = "../rerun_urdf" }
rsbullet = { version = "0.3.0", path = "../rsbullet/rsbullet" }
nalgebra = "0.34.1"
anyhow = "1.0.100"
